Increased Lineheight of content title (h1). This should prevent MultiLine Headers from overlapping

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -45,7 +45,7 @@ body{
     padding: 0;
 }
 .project-content{
-    line-height: 115%;
+    line-height: 1.5em;
     padding: 2%;
 }
 a {
